[metadata]
name = repickle
version = attr: repickle.__version__
author = Everaldo Canuto
author_email = everaldo.canuto@gmail.com
description = Extended pickling support for Python object
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
url = https://github.com/ecanuto/repickle
project_urls =
    Bug Tracker = https://github.com/ecanuto/repickle/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
packages = find:
python_requires = >=3.6
